Assembly of the z-movies-LoG.ipynb

--- a/Image Processing for Complex Tissue Geometry Using Artificial Intelligence/Assembly of the z-movies-LoG.ipynb
+++ b/Image Processing for Complex Tissue Geometry Using Artificial Intelligence/Assembly of the z-movies-LoG.ipynb
@@ -444,7 +444,7 @@
     "for i in range(0,num_slices):\n",
     "    my_tif_file = f'Z-slices/z_slice_{i}.tif' \n",
     "    z_slice_dict[f'z_slice_{i}'] = imageio.volread(my_tif_file)  # Store the images in the dictionary\n",
-    "    additional_images = z_slice_dict[f'z_slice_{i}'][0:92] #add one cardiac cycle\n",
+    "    additional_images = z_slice_dict[f'z_slice_{i}'][0:length_cycle_with_max_freq] #add one cardiac cycle\n",
     "    z_slice_dict[f'z_slice_{i}_doubled'] = np.concatenate([additional_images, additional_images]) # 150 im + 1 cycle\n",
     "\n",
     "    # Path to save the file\n",
